# open-tuner

./: .dockerignore  .gitignore  Dockerfile  README.md  app.config.ts  app.json  metro.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
app/: _layout.tsx  index.tsx
components/tunerUi/: index.ts  types.ts  utils.ts
components/tunerUi/AnimatedBorderView/: AnimatedContainerView.tsx  index.ts
components/tunerUi/AnimatedHalo/: AnimatedHalo.tsx  SingleAnimatedHalo.tsx  index.ts
components/tunerUi/GaugeBackground/: GaugeBackground.tsx  index.ts
components/tunerUi/GaugeNeedle/: GaugeNeedle.tsx  index.ts
components/tunerUi/components/: AnimatedHalo.tsx  GaugeNeedle.tsx  TunerView.tsx
components/tunerUi/components/SVG/: NeedleSVG.tsx  SingleAnimatedHalo.tsx
components/tunerUi/hooks/: index.ts  useHaloAnimation.ts  useTunerDisplay.ts  useTunerResult.ts
modules/tuner-dsp/: expo-module.config.json
modules/tuner-dsp/android/: build.gradle
modules/tuner-dsp/hooks/: useTuner.ts
modules/tuner-dsp/ios/: TunerDspView.swift
pages/: privacy-policy.html
scripts/: icon-gen.py
tuner-dsp/: package.json  tsconfig.json
tuner-dsp/android/: CMakeLists.txt
tuner-dsp/hooks/: configs.ts  index.ts  types.ts  useTuner.ts
tuner-dsp/hooks/audio/: permissions.ts
tuner-dsp/hooks/tuner/: index.ts  useTunerProcessor.ts  useTunerResults.ts
